objects/RTSMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration Settings for mapping RTS Request code with fields (Created by Subba Reddy)</description>
    <fields>
        <fullName>API_Name__c</fullName>
        <description>Stores the API Name of the field to be referenced.</description>
        <inlineHelpText>API Name of the field to be referenced.</inlineHelpText>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Represents the ATTRIBUTE_CDE in RTS Interface</description>
        <inlineHelpText>Represents the ATTRIBUTE_CDE in RTS Interface</inlineHelpText>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Name of the Object</description>
        <inlineHelpText>API name of the object on which the field is present.</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isItemAttribute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if the field is OutputItemsAttribNode and is related to Item XML</description>
        <inlineHelpText>Check this field if the field is OutputItemsAttribNode and is related to Item XML</inlineHelpText>
        <label>isItemAttribute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isProgramAttribute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if the field is OutputRtsAttribNode and is related to RTS_Request XML</description>
        <inlineHelpText>Check this field if the field is OutputRtsAttribNode and is related to RTS_Request XML</inlineHelpText>
        <label>isProgramAttribute</label>
        <type>Checkbox</type>
    </fields>
    <label>RTS Mapping</label>
</CustomObject>